légère optimisation du code de nicolas concernant les types struct used